--- a/programs/myapp/Cargo.toml
+++ b/programs/myapp/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "solana_token_transfer"
+name = "myapp"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "solana_token_transfer"
+name = "myapp"
 
 [features]
 no-entrypoint = []
