--- a/programs/new-contract/Cargo.toml
+++ b/programs/new-contract/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "myapp"
+name = "new-contract"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "myapp"
+name = "new_contract"
 
 [features]
 no-entrypoint = []
