--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,7 +5,7 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-myapp = "9ZYjYpXLYgD6EDWzDSUaugddxo1eYPwXbGMWkNmWo54a"
+new_contract = "AiGbCagvc38sisassbpG7SJjfgSDrU7Q8JP3G8TYTgfU"
 
 [registry]
 url = "https://api.apr.dev"
